# unicorn

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yaml  publish.yaml
docs/ja/: README.md
src/: cli.rs  main.rs
